# grav-sim

./: .gitignore  Cargo.toml  README.md  environment.yml  index.html
src/: app.rs  lib.rs  main.rs  state.rs
src/shaders/: bodies.wgsl
