[package]
name = "grav-sim"
version = "0.1.0"
edition = "2021"

[lib]
name = "grav_sim"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.98"
env_logger = "0.11.8"
log = "0.4.27"
pollster = "0.4.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["time"] }
tracing-web = "0.1.3"
wgpu = "24.0.5"
winit = "0.30.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "25.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}